partiql/tests/snapshots/pretty__graph_edge_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM g MATCH (a:A) -> (b:B)
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -> (b:B)

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -> (b:B)

--------------------------------------------------------------------------------
SELECT a, b FROM g MATCH (a:A) -> (b:B)

----------------------------------------
SELECT a, b FROM g MATCH (a:A) -> (b:B)

------------------------------
SELECT a, b
FROM g MATCH (a:A) -> (b:B)

--------------------
SELECT a, b
FROM g MATCH (a:A) -> (b:B)

----------
SELECT a,
  b
FROM g MATCH (a:A) -> (b:B)
